# Gesture_manipulator

./: CMakeLists.txt  README.md  package.xml
gesture_robot/: gesture_subscriber.py
launch/: gestureNrobot.launch.py  runmanipulator.launch.py
src/: moveit_stage.cpp  mtc_tutorial.cpp
